flask-api-chart/templates/allow-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
  namespace: flask-api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: flask-api
      app.kubernetes.io/name: flask-api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 5000
